--- a/browser/index.html
+++ b/browser/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>SuranagemsWorkspace</title>
-  <base href="/Blackbox/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>body{font-family:Arial,sans-serif;margin:0;padding:0;box-sizing:border-box}</style><link rel="stylesheet" href="styles-ESPIPEH6.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-ESPIPEH6.css"></noscript></head>
